Added max-content-length config for akka http.
If this configuration is missing, it is not possible to download
larger files from a Webdav server.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -16,6 +16,16 @@
 # Configuration file for the actor system used by the stream sync application.
 ############################################
 
+akka {
+    http {
+        client {
+            parsing {
+                max-content-length = infinite
+            }
+        }
+    }
+}
+
 blocking-dispatcher {
     type = Dispatcher
     executor = "thread-pool-executor"
