Config: Changed conflicting-content-type-header-processing-mode.
File uploads to GoogleDrive were failing because the response of an
upload trigger request contains multiple `Content-Type` headers. Akka
Http per default throws an exception in this case and terminates
processing. This behavior can be changed via configuration, so that
the interaction with GoogleDrive is successful again.

Signed-off-by: Oliver Heger <oliver.heger@oliver-heger.de>

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -26,6 +26,10 @@ akka {
                 max-content-length = infinite
             }
         }
+
+        parsing {
+            conflicting-content-type-header-processing-mode = first
+        }
     }
 }
 
